/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/inventory/account/pb/gen";

package ukama.inventory.account.v1;

service AccountService {
    rpc Get(GetRequest) returns (GetResponse);
    rpc GetByCompany(GetByCompanmyRequest) returns (GetByCompanmyResponse);

    rpc SyncAccounts(SyncAcountsRequest) returns (SyncAcountsResponse);
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    Account account = 1;
}

message GetByCompanmyRequest {
    string company = 1;
}

message GetByCompanmyResponse {
    repeated Account accounts = 1;
}

message SyncAcountsRequest {}

message SyncAcountsResponse {}

message Account {
    string id = 1;
    string company = 2;
    string item = 3;
    string description = 4;
    string inventory = 5;
    double opexFee = 6 [json_name = "opex_fee"];
    double vat = 7;
    string effectiveDate = 8 [json_name = "effective_date"];
}

